k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: morpheus-web
  namespace: morpheus
spec:
  selector:
    app: morpheus-web
  ports:
    - port: 80
      targetPort: 8000
